--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,11 @@ button:hover {
   align-items: center;
   gap: 40px;
 }
+
+.main,
+.aside {
+  flex: 1;
+}
 .header h1 {
   font-size: 48px;
   font-weight: 900;
@@ -102,6 +107,7 @@ button:hover {
 }
 
 header img {
+  width: 100%;
   max-width: 30vw;
   height: auto;
 }
